@@ -7,6 +7,7 @@ I will note if new ITAF tuning or config is required. Simply check the "ITAF CON
 V4.1.0:
 [Logic]
 * Fixed: Various logic controller bugs
+* Changed: Improved autoland flare law
 
 V4.0.9:
 [Control Loop]
